// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CLI capability profiles locks the default capability baseline 1`] = `
{
  "ai": {
    "instructionSets": [
      "stable",
    ],
    "nestedAgents": [
      "dashboard",
      "worksheet",
      "worksheet-dashboard",
    ],
    "topLevelToolGroups": [
      "default-data-analysis",
      "artifact-context",
      "dashboard-agent",
      "worksheet-agent",
      "webcontainer",
      "chart",
      "chart-image-for-markdown",
    ],
  },
  "artifacts": {
    "creatable": [
      "worksheet",
      "dashboard",
    ],
    "runContext": [
      "worksheet",
      "dashboard",
      "pivot",
      "notebook",
      "document",
      "sql-query",
      "html-app",
      "python",
      "canvas",
      "app-builder",
    ],
  },
  "blocks": {
    "aiContext": [
      "chart",
      "dashboard",
    ],
    "interactiveRenderers": [
      "chart",
      "dashboard",
      "data-table",
    ],
    "placeholderRenderers": [
      "pivot",
      "map",
      "document",
      "sql-query",
      "html-app",
      "python",
    ],
    "stateful": [
      "dashboard",
      "data-table",
    ],
  },
  "commands": [
    "dashboard",
    "mosaic-dashboard",
    "block-document",
    "cli-block-document",
  ],
  "dashboard": {
    "deckMaps": false,
  },
  "lifecycleSlices": [
    "ai",
    "ai-settings",
    "app-project",
    "artifacts",
    "artifact-ai",
    "block-documents",
    "canvas",
    "cells",
    "crdt",
    "dashboard",
    "dashboard-features",
    "db-settings",
    "deck-maps",
    "documents",
    "html-apps",
    "mosaic",
    "notebook",
    "pivot",
    "python",
    "room-shell",
    "sql-editor",
    "webcontainer",
    "workspace-ui",
  ],
  "name": "default",
  "skills": [],
  "version": 1,
}
`;

exports[`CLI capability profiles locks the experimental capability baseline 1`] = `
{
  "ai": {
    "instructionSets": [
      "stable",
      "experimental",
    ],
    "nestedAgents": [
      "dashboard",
      "worksheet",
      "worksheet-dashboard",
      "html-app",
    ],
    "topLevelToolGroups": [
      "default-data-analysis",
      "artifact-context",
      "dashboard-agent",
      "html-app-agent",
      "worksheet-agent",
      "webcontainer",
      "chart",
      "chart-image-for-markdown",
    ],
  },
  "artifacts": {
    "creatable": [
      "worksheet",
      "dashboard",
      "pivot",
      "notebook",
      "document",
      "sql-query",
      "html-app",
      "python",
      "canvas",
      "app-builder",
    ],
    "runContext": [
      "worksheet",
      "dashboard",
      "pivot",
      "notebook",
      "document",
      "sql-query",
      "html-app",
      "python",
      "canvas",
      "app-builder",
    ],
  },
  "blocks": {
    "aiContext": [
      "chart",
      "dashboard",
      "html-app",
      "map",
    ],
    "interactiveRenderers": [
      "chart",
      "dashboard",
      "pivot",
      "data-table",
      "map",
      "document",
      "sql-query",
      "html-app",
      "python",
    ],
    "placeholderRenderers": [],
    "stateful": [
      "dashboard",
      "pivot",
      "data-table",
      "map",
      "document",
      "sql-query",
      "html-app",
      "python",
    ],
  },
  "commands": [
    "dashboard",
    "mosaic-dashboard",
    "document",
    "block-document",
    "cli-block-document",
    "block-document-python",
    "html-app-revision",
  ],
  "dashboard": {
    "deckMaps": true,
  },
  "lifecycleSlices": [
    "ai",
    "ai-settings",
    "app-project",
    "artifacts",
    "artifact-ai",
    "block-documents",
    "canvas",
    "cells",
    "crdt",
    "dashboard",
    "dashboard-features",
    "db-settings",
    "deck-maps",
    "documents",
    "html-apps",
    "mosaic",
    "notebook",
    "pivot",
    "python",
    "room-shell",
    "sql-editor",
    "webcontainer",
    "workspace-ui",
  ],
  "name": "experimental",
  "skills": [],
  "version": 1,
}
`;
